# COINAPP

./: AGENTS.md  Makefile  README.md  docker-compose.yml  requirements.txt
CoinTrade AI Agent/: Makefile  README.md
CoinTrade AI Agent/apps/api/: pyproject.toml
CoinTrade AI Agent/apps/api/quantrade_api/: config.py  main.py  services.py
CoinTrade AI Agent/apps/api/quantrade_api/persistence/: models.py  repository.py  session.py
CoinTrade AI Agent/apps/streamlit/: README.md  app.py
CoinTrade AI Agent/apps/streamlit/quantrade_streamlit/: __init__.py  adapter.py
CoinTrade AI Agent/apps/web/: package.json  tailwind.config.js
CoinTrade AI Agent/apps/web/src/: App.tsx  styles.css
CoinTrade AI Agent/docs/: architecture.md  implementation-plan.md  paper-trading-model.md  runbook.md  security.md  strategy-specification.md
CoinTrade AI Agent/infrastructure/docker/: api.Dockerfile  web.Dockerfile
CoinTrade AI Agent/infrastructure/migrations/: 0001_initial_schema.sql  alembic.ini  env.py
CoinTrade AI Agent/infrastructure/migrations/versions/: 0001_initial_schema.py
CoinTrade AI Agent/scripts/: fixture_replay.py
CoinTrade AI Agent/services/ai_explanation/quantrade_ai/: __init__.py  templates.py
CoinTrade AI Agent/services/feature_engine/quantrade_features/: __init__.py  engine.py
CoinTrade AI Agent/services/market_ingestion/quantrade_market/: __init__.py  fixture_provider.py  order_book.py
CoinTrade AI Agent/services/paper_execution/quantrade_paper/: __init__.py  (+1 more)
CoinTrade AI Agent/tests/: test_api_services.py  test_core.py  test_streamlit_adapter.py
(+8 files in other folders)
