[project]
name = "quantrade-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2",
  "pydantic-settings>=2",
  "sqlalchemy>=2",
  "alembic>=1.13",
  "httpx>=0.27",
  "websockets>=12",
  "tenacity>=8",
  "structlog>=24",
  "psycopg[binary]>=3",
  "redis>=5",
  "numpy>=1.26",
  "pandas>=2.2",
  "streamlit>=1.37",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
